--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "booking",
+  "name": "calculator",
   "version": "0.0.1",
-  "description": "simple booking to site",
+  "description": "simple calculator to site",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
